[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Objects/LockedObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="LockedObject" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="KeyHole" type="Node2D" parent="."]
position = Vector2( 20, -8 )
scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KeyHole"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="KeyHole"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyHole/Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="KeyHole/Area2D" to="." method="_on_KeyHole_Area2D_input_event"]
